# ChangeLog for dev-php/PEAR-DB
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-DB/ChangeLog,v 1.8 2004/04/19 01:14:02 weeve Exp $

  18 Apr 2004; Jason Wever <weeve@gentoo.org> PEAR-DB-1.5.0_rc2.ebuild:
  Stable on sparc.

  17 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> PEAR-DB-1.6.1.ebuild:
  Added IUSE=

  12 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> PEAR-DB-1.3.ebuild,
  PEAR-DB-1.5.0_rc2.ebuild:
  Added IUSE=.

*PEAR-DB-1.6.1 (15 Mar 2004)

  15 Mar 2004; Tal Peer <coredumb@gentoo.org> PEAR-DB-1.5.0_rc2.ebuild,
  PEAR-DB-1.6.1.ebuild:
  1.5.0_rc2 stable on x86, bumped version to 1.6.1

  13 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  add metadata.xml

  11 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> PEAR-DB-1.3.ebuild:
  fix bug #28168, move to stable

*PEAR-DB-1.5.0_rc2 (23 Dec 2003)

  23 Dec 2003; Tal Peer <coredumb@gentoo.org> PEAR-DB-1.5.0_rc2.ebuild:
  Version bump.
  Uses the new eclass.

*PEAR-DB-1.3 (07 May 2003)

  07 May 2003; Joshua Brindle <method@gentoo.org> Manifest,
  PEAR-DB-1.3.ebuild:
  Initial import, I needed this and it wasn't here...
