@@ -1,0 +1,11 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-DB/Attic/PEAR-DB-1.6.4.ebuild,v 1.1 2004/05/04 14:42:35 coredumb Exp $
+
+inherit php-pear
+
+DESCRIPTION="Database abstraction layer for PHP"
+LICENSE="PHP"
+SLOT="0"
+KEYWORDS="~x86 ~ppc ~sparc ~alpha"
+IUSE=""
