@@ -1,6 +1,11 @@
 # ChangeLog for dev-php/PEAR-DB
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-DB/ChangeLog,v 1.8 2004/04/19 01:14:02 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-DB/ChangeLog,v 1.9 2004/05/04 14:42:35 coredumb Exp $
+
+*PEAR-DB-1.6.4 (04 May 2004)
+
+  04 May 2004; Tal Peer <coredumb@gentoo.org> PEAR-DB-1.6.4.ebuild:
+  Version bump, bug #49719
 
   18 Apr 2004; Jason Wever <weeve@gentoo.org> PEAR-DB-1.5.0_rc2.ebuild:
   Stable on sparc.
